Added training section. Modified script.js, _divider.scss, _shop.scss

--- a/src/index.html
+++ b/src/index.html
@@ -189,6 +189,56 @@
                 </div>
 
 
+                    <a href="#" class="shop__show-cards">Show All</a>
+                    <div class="divider divider_horizontal divider_shop"></div>
+                
+            </div>
+        </section>
+
+
+        <section class="training">
+            <div class="container">
+                <div class="training-wrapper">
+                    <div class="training-surf">
+                        <div>
+                            <div class="training-surf__title">Surf Training</div>
+                        <div class="divider divider_horizontal divider_small"></div>
+
+                        <div class="training-descr">
+                            <div class="training-descr__text">
+                                By better understanding the various aspects of surfing, By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+                            </div>
+                            <a href="#" class="training-descr__link">Read More</a>
+                            <div class="divider divider_horizontal divider_training"></div> 
+                        </div>
+                        </div>
+
+                        <div class="training-surf__photo">
+                            <img src="img/training/img_1.jpg" alt="men on serf">
+                        </div>
+                    </div>
+
+                    <div class="training-point">
+                        <div class="training-point__photo">
+                            <img src="img/training/img_2.jpg" alt="surf on sand">
+                        </div>
+
+                        <div>
+                            <div class="training-point__title">Point Break</div>
+                        <div class="divider divider_horizontal divider_small"></div>
+
+                        <div class="training-descr">
+                            <div class="training-descr__text">
+                                By better understanding the various aspects of By better understanding the various aspects of surfing, By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
+                                </div>
+                                <a href="#" class="training-descr__link">Read More</a>
+                                <div class="divider divider_horizontal divider_training"></div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
 
@@ -198,6 +248,7 @@
     </div>
 
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/simplePlayer.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
