Added sections club, camp and footer

--- a/src/index.html
+++ b/src/index.html
@@ -230,20 +230,91 @@
                         <div class="training-descr">
                             <div class="training-descr__text">
                                 By better understanding the various aspects of By better understanding the various aspects of surfing, By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
-                                </div>
-                                <a href="#" class="training-descr__link">Read More</a>
-                                <div class="divider divider_horizontal divider_training"></div> 
                             </div>
+                            <a href="#" class="training-descr__link">Read More</a>
+                            <div class="divider divider_horizontal divider_training"></div> 
+                        </div>
                         </div>
                     </div>
                 </div>
-
 
             </div>
         </section>
 
 
 
+        <section class="club">
+            <div class="container">
+                <div class="club-wrapper">
+                    <div class="divider divider_vertical"></div>
+
+                    <div class="club__title">Join the Club</div>
+                    <div class="club__subtitle">
+                        By better understanding the various aspects of surfing, you will improve faster 
+                        and have more fun in the water.
+                    </div>
+
+                    <form class="club-form" name="club-form">
+                        <input class="club-form__email" name="email" type="email" placeholder="Your E-mail">
+                        <button class="club-form__submit" name="submit" type="submit"></button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="camp">
+            <div class="container">
+                <div class="camp-wrapper">
+                    <div class="camp-wrapper__photo">
+                        <img src="img/ourcamp/img_1.jpg" alt="our camp">
+                    </div>
+
+                    <div>
+                        <div class="camp-wrapper__title">Our Camp</div>
+                        <div class="camp-wrapper__subtitle">
+                            CA 91932, USA
+                            Imperial Beach <br>
+                            560 Silver Strand Blvd
+                        </div>
+
+                        <div class="camp-descr">
+                            <a href="#" class="camp-descr__link">Get in Touch</a>
+                            <div class="divider divider_horizontal divider_camp"></div> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div class="footer-header">
+                        <div class="footer-header__logo">
+                            <a href="#">
+                                <img src="icons/logo.png" alt="Logo">
+                            </a>
+                        </div>
+                        <menu class="main-header__menu footer-header__menu">
+                            <ul>
+                                <li><a href="#">Stories</a></li>
+                                <li><a href="#">Events</a></li>
+                                <li><a href="#">Places</a></li>
+                                <li><a href="#">Boards</a></li>
+                            </ul>
+                        </menu>
+                        <div class="footer-social">
+                            <a href="#"><img src="icons/social/svg/tumblr.svg" alt="tumblr"></a>
+                            <a href="#"><img src="icons/social/svg/twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="icons/social/svg/vimeo.svg" alt="vimeo"></a>
+                        </div>
+                    </div>
+
+                    
+                </div>
+            </div>
+        </footer>
 
     </div>
 
